--- a/package.json
+++ b/package.json
@@ -3,6 +3,15 @@
   "name": "weather",
   "version": "0.1.0",
   "private": true,
+  "nowConfig": {
+    "rewrites": [
+      {
+        "source": "/(.*)",
+        "destination": "/index.html"
+      }
+    ]
+  },
+  
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -15,6 +24,8 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
+
+  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
